version 2.4 (release 20180810). The new version fixes one soundness
defect and two incompleteness defects. Very slight INCOMPATIBILITY.

* Nitpick/Kodkod may be invoked directly within the running
Isabelle/Scala session (instead of an external Java process): this
improves reactivity and saves resources. This experimental feature is
guarded by system option "kodkod_scala" (default: true in PIDE
interaction, false in batch builds).

* Simproc "defined_all" and rewrite rule "subst_all" perform more
aggressive substitution with variables from assumptions.
INCOMPATIBILITY, consider repairing proofs locally like this:

  supply subst_all [simp del] [[simproc del: defined_all]]

* Simproc "datatype_no_proper_subterm" rewrites equalities "lhs = rhs"
on datatypes to "False" if either side is a proper subexpression of the
other (for any datatype with a reasonable size function).

* Syntax for state monad combinators fcomp and scomp is organized in
bundle state_combinator_syntax.  Minor INCOMPATIBILITY.

* Syntax for reflected term syntax is organized in bundle term_syntax,
discontinuing previous locale term_syntax.  Minor INCOMPATIBILITY.

* New constant "power_int" for exponentiation with integer exponent,
written as "x powi n".

* Added the "at most 1" quantifier, Uniq.

* For the natural numbers, "Sup {} = 0".

* New constant semiring_char gives the characteristic of any type of
class semiring_1, with the convenient notation CHAR('a). For example,
CHAR(nat) = CHAR(int) = CHAR(real) = 0, CHAR(17) = 17.

* HOL-Computational_Algebra.Polynomial: Definition and basic properties
of algebraic integers.

* Library theory "Bit_Operations" with generic bit operations.

* Library theory "Signed_Division" provides operations for signed
division, instantiated for type int.

* Theory "Multiset": removed misleading notation \<Union># for sum_mset;
replaced with \<Sum>\<^sub>#. Analogous notation for prod_mset also exists now.
